Fix trimmed whitespace in cells

--- a/src/style/tables.scss
+++ b/src/style/tables.scss
@@ -184,6 +184,9 @@ $table-border: 1px solid $table-border-color;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    // This is needed so that we can display white space in our cells without
+    // AG Grid trimming them.
+    white-space: break-spaces;
 
     &:not(.borderless) {
       border-bottom: $table-border;
